k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${KUBE_NAMESPACE}
  labels:
    app.kubernetes.io/name: rentorbit
    app.kubernetes.io/part-of: rentorbit
